fixed overflow problem

--- a/profile-card-component-main/style.css
+++ b/profile-card-component-main/style.css
@@ -11,7 +11,6 @@ body {
   background-repeat: no-repeat, no-repeat;
   background-color: hsl(185, 75%, 39%);
   background-position: -350px -450px, 650px 400px;
-
   overflow: hidden;
   border: 2px solid black;
 }
@@ -20,6 +19,7 @@ body {
   border: 2px solid white;
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
